--- a/app/src/main/res/layout/item_skilliq.xml
+++ b/app/src/main/res/layout/item_skilliq.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SkillIQ_leaders">
+    tools:context=".fragments.SkillIQ_leaders">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_IQ"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
