--- a/app/src/main/res/layout/fragment_learning__leaders.xml
+++ b/app/src/main/res/layout/fragment_learning__leaders.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".learning_Leaders">
+    tools:context=".fragments.learning_Leaders">
 
    <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/rv_learning_leaders"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
 </FrameLayout>
