--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
-                android:text="@string/leaderboard" />
+                android:text="@string/leaderboard"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:layout_marginStart="120dp"
                 android:fontFamily="monospace"
-                android:text="@string/submit" />
+                android:backgroundTint="@android:color/white"
+                android:elevation="18dp"
+                android:text="@string/submit"
+                android:textColor="@android:color/black" />
 
         </androidx.appcompat.widget.Toolbar>
 
